# study-tracker

./: .gitignore  ARCHITECTURE.md  README.md  app.py  pyproject.toml
src/study_tracker/: __init__.py  __main__.py  analytics.py  analytics_v2.py  app.py  charts.py  cli.py  init_db.py  models.py  storage.py  study_insights.py  summaries.py  web.py
src/study_tracker/static/: styles.css
src/study_tracker/templates/: base.html  charts.html  dashboard.html  index.html  statistics.html
tests/: test_analytics.py  test_analytics_v2.py  test_app.py  test_charts.py  test_cli.py  test_models.py  test_storage.py  test_study_insights.py  test_summaries.py
