[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "study-tracker"
version = "0.1.0"
description = "A local CSV-backed study time tracker with summaries and charts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
study-tracker = "study_tracker.cli:main"
study-tracker-init-db = "study_tracker.init_db:main"
study-tracker-web = "study_tracker.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
study_tracker = [
    "static/**/*.css",
    "static/charts/.gitkeep",
    "templates/**/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
